--- a/about.html
+++ b/about.html
@@ -77,13 +77,14 @@
             </h6>
             <div class="custom_heading-container">
               <h2>
-                English Dictionary
+                Body Mass Index (BMI) Calculator
               </h2>
               <hr>
             </div>
             <p>
-              Simple English Dictionary using HTML CSS JS and Dictionary API.This is a dictionary web application that
-              allows users to search for word definitions
+              Simple Body Mass Index (BMI) Calculator using HTML CSS JS.About
+              BMI (body mass index) is a measure of whether you're a healthy weight for your height. Use this BMI
+              calculator to check the adults in your family.
             </p>
             <div>
 
