--- a/index.html
+++ b/index.html
@@ -79,11 +79,10 @@
           </a>
           <h1>
             Discovering <br>
-            English Dictionary
+            Body Mass Index (BMI) Calculator
           </h1>
           <p>
-            Simple English Dictionary using HTML CSS JS and Dictionary API.This is a dictionary web application that
-            allows users to search for word definitions
+            Simple Body Mass Index (BMI) Calculator using HTML CSS JS.
           </p>
           <div>
             <a href="contact.html" class="slider-link">
@@ -95,13 +94,13 @@
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/project/dict1.jpg" alt="" style="height:70vh;">
+                <img src="images/project/BMI.jpg" alt="" style="height:70vh;">
               </div>
               <div class="carousel-item">
-                <img src="images/project/dict2.jpg" alt="" style="height:70vh;">
+                <img src="images/project/bmi2.jpg" alt="" style="height:70vh;">
               </div>
               <div class="carousel-item">
-                <img src="images/project/dict3.jpg" alt="" style="height:70vh;">
+                <img src="images/project/bmi3.jpg" alt="" style="height:70vh;">
               </div>
             </div>
 
@@ -111,6 +110,19 @@
       </div>
     </section>
   </div>
+
+  <section class="about_section layout_padding">
+    <div class="container1 container mx-4">
+      <h1 class="heading">Body Mass Index (BMI) Calculator</h1>
+      Your Height (cm):
+      <input type="number" class="input" id="height" value="180" placeholder="Enter your height in cm">
+      Your Weight (kg):
+      <input type="number" class="input" id="weight" value="80" placeholder="Enter your weight in kg">
+      <button class="btn" id="btn">Compute BMI</button>
+      <input disabled type="text" class="input" id="bmi-result">
+      <h4 class="info-text">Weight Condition: <span id="weight-condition"></span></h4>
+    </div>
+  </section>
   <section class="about_section layout_padding">
     <div class="container">
       <div class="row">
@@ -121,13 +133,14 @@
             </h6>
             <div class="custom_heading-container">
               <h2>
-                English Dictionary
+                Body Mass Index (BMI) Calculator
               </h2>
               <hr>
             </div>
             <p>
-              Simple English Dictionary using HTML CSS JS and Dictionary API.This is a dictionary web application that
-              allows users to search for word definitions
+              Simple Body Mass Index (BMI) Calculator using HTML CSS JS.About
+              BMI (body mass index) is a measure of whether you're a healthy weight for your height. Use this BMI
+              calculator to check the adults in your family.
             </p>
             <div>
 
@@ -285,8 +298,10 @@
       <a href="">WebStudio</a>
     </p>
   </section>
+  <script type="text/javascript" src="js/index.js"></script>
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
+
 </body>
 </body>
 
